add pagination + refactor folders structure

--- a/pvs-api/package.json
+++ b/pvs-api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-paginate": "^1.0.0",
     "mongoose": "^5.9.18",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
