--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,5 @@ WEBAPP_PORT=8081
 MONGO_EXPRESS_PORT=8082
 
 # Username et password permettant l'accès au mongo express
-MONGO_EXPRESS_USERNAME=vivien
-MONGO_EXPRESS_PASSWORD=PRTime2go
+MONGO_EXPRESS_USERNAME=*****
+MONGO_EXPRESS_PASSWORD=*****
