api : protect admin route

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ FB_ACCESS_TOKEN=***
 # Port de l'API à exposer
 API_PORT=3000
 
+# Token d'accès aux routes protégées de l'API
+API_ADMIN_TOKEN=*****
+
 # Port de la webapp à exposer
 WEBAPP_PORT=8081
 
